# xpad

./: ChangeLog  Makefile.am  autogen.sh  configure.ac  xpad_5.4.0.orig.tar.bz2.delta  xpad_5.4.0.orig.tar.bz2.id  xpad_5.5.0.orig.tar.bz2.delta  xpad_5.5.0.orig.tar.bz2.id  xpad_5.6.0.orig.tar.bz2.delta  xpad_5.6.0.orig.tar.bz2.id  xpad_5.7.0.orig.tar.bz2.delta  xpad_5.7.0.orig.tar.bz2.id  xpad_5.8.0.orig.tar.bz2.delta  xpad_5.8.0.orig.tar.bz2.id
data/: Makefile.am  Makefile.in  xpad.appdata.xml.in  xpad.desktop.in
debian/: changelog  control  copyright  install  links  lintian-overrides  rules  watch
debian/patches/: 01_fix_typos.diff  01_use_libayatana-appindicator.diff  02_add_keywords_to_desktop_file.diff  03_preserve_po-Makefile-in-in.diff  04_install_xpad-user-help_file_as_doc.diff  missing.diff  series
debian/tests/: control
debian/upstream/: metadata  signing-key.asc
doc/: Makefile.am  xpad-user-help.txt
po/: Makevars  POTFILES.in  POTFILES.skip  Xpad.pot  af.po  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  ie.po  it.po  ja.po  ko.po  lt.po  lv.po  ms.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+14 more)
src/: Makefile.am  fio.c  fio.h  help.c  prefix.c  xpad-app.c  xpad-app.h  xpad-grip-tool-item.c  xpad-pad-group.c  xpad-pad-group.h  xpad-pad-properties.c  xpad-pad.c  xpad-pad.h  xpad-periodic.c  xpad-preferences.c  xpad-preferences.h  xpad-search-bar.c  xpad-search-bar.h  xpad-session-manager.c  xpad-settings.c  xpad-settings.h  xpad-styling-helpers.c  xpad-styling-helpers.h  xpad-text-buffer.c  xpad-text-buffer.h  xpad-text-view.c  xpad-text-view.h  xpad-toolbar.c  xpad-toolbar.h  xpad-tray.c  xpad-tray.h  xpad-undo.c
